# jenkinscli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
jenkinscli/: __init__.py  cli.py  config.py  console.py
jenkinscli/cli/: __init__.py  build.py  choice.py  executor.py  job.py  plugin.py  validate.py
